--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -9,6 +9,7 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 pkg-resources==0.0.0
 pylint==2.5.3
+pylint-quotes==0.2.1
 python-dotenv==0.14.0
 six==1.15.0
 toml==0.10.1
