--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,9 +1,19 @@
 # From https://github.com/github/gitignore
-# Built output
-elm.js
 
 # elm-package generated files
 elm-stuff
 
 # elm-repl generated files
 repl-temp-*
+
+# Sass things
+.sass-cache/
+*.css.map
+*.sass.map
+*.scss.map
+
+# NPM things
+node_modules/
+
+# Build output
+dist/
