--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "mkdir -p dist && npm run build:html && npm run build:sass && npm run build:elm",
     "build:html": "cp index.html dist/",
-    "build:sass": "sass styles:dist/styles",
+    "build:sass": "sass styles:dist/styles -I node_modules/",
     "build:elm": "elm make src/Main.elm --output=dist/elm.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,5 +27,8 @@
   "homepage": "https://github.com/helloworld12321/cultural-touchstones#readme",
   "devDependencies": {
     "sass": "^1.26.10"
+  },
+  "dependencies": {
+    "sakura.css": "^1.3.1"
   }
 }
