--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -22,6 +22,12 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        sudo apt-get install \
+          mariadb-server \
+          mariadb-backup \
+          libmariadb3 \
+          libmariadb-dev \
+          python3-dev
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run pylint
