--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -36,7 +36,10 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run pylint
-      run: pylint --load-plugins pylint_quotes cultural_touchstones test
+      run: |
+        pylint --load-plugins pylint_quotes \
+          cultural_touchstones \
+          test/**
 
   test:
     runs-on: ubuntu-latest
