Install elm-test and write a simple demo test

--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/helloworld12321/cultural-touchstones#readme",
   "devDependencies": {
+    "elm-test": "^0.19.1-revision2",
     "sass": "^1.26.10"
   },
   "dependencies": {
