--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "build:html": "cp index.html dist/",
     "build:sass": "sass styles:dist/styles -I node_modules/",
     "build:elm": "elm make src/Main.elm --output=dist/elm.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx elm-test"
   },
   "repository": {
     "type": "git",
