--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -87,5 +87,5 @@ jobs:
       # ¯\_(ツ)_/¯
       run: sudo mariadbd --init-file="${PWD}/../database/testing_startup.sql" &
     - name: Run pytest
-      run: pytest
+      run: python setup.py test
 
