--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,7 @@ astroid==2.4.2
 attrs==19.3.0
 click==7.1.2
 Flask==1.1.2
+gunicorn==20.0.4
 importlib-metadata==1.7.0
 iniconfig==1.0.1
 isort==4.3.21
