Refactor the client-side code a bit
Now, the functions Ajax.elm handles the entire Http request, not just the JSON decoding parts. Also, we split View.elm into a big function and a helper function.

(The tests still fail—we're getting there, I promise 🙂)

--- a/nginx.dev.conf
+++ b/nginx.dev.conf
@@ -32,6 +32,8 @@ http {
     }
 
     location / {
+      # I'd use the `alias` command here, but that doesn't play very well with
+      # MIME types.
       root client/dist/;
     }
   }
