--- a/.editorconfig
+++ b/.editorconfig
@@ -14,3 +14,8 @@ indent_size = 4
 
 [*.md]
 trim_trailing_whitespace = false
+
+# Tools like `elm init` all use four spaces of indentaion for elm.json, so we
+# will too.
+[elm.json]
+indent_size = 4
