--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -32,6 +32,8 @@ jobs:
     - name: Install apt dependencies
       run: |
         sudo apt-get install -y libmariadb3 libmariadb-dev
+    # Make sure we're using a version of pip with `wheel` installed
+    - run: pip install --upgrade pip && pip install wheel
     - name: Run the linter
       run: python setup.py lint
 
@@ -73,6 +75,7 @@ jobs:
       # This a bit of a hack, but it's good enough for government work, I guess
       # ¯\_(ツ)_/¯
       run: sudo mariadbd --init-file="${PWD}/../database/testing_startup.sql" &
+    - run: pip install --upgrade pip && pip install wheel
     - name: Run the tests
       run: python setup.py test
 
