Just run all the GitHub Actions on every push
Instead of trying to detect which files changed and only running the relevant tests. (In the latter case, it's super easy to get in a state where the build looks like it's passing, but it isn't really.)

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -1,10 +1,6 @@
 name: Client-side tests
 
-on:
-  push:
-    paths:
-    - 'client/**'
-    - '.github/workflows/client.yml'
+on: push
 
 jobs:
   lint:
