--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,11 @@
   "description": "A web app to keep track of movies you've been meaning to watch.",
   "main": "dist/elm.js",
   "scripts": {
-    "build": "mkdir -p dist && npm run build:html && npm run build:sass && npm run build:elm",
-    "build:html": "cp index.html dist/",
-    "build:sass": "sass styles:dist/styles -I node_modules/",
-    "build:elm": "elm make src/Main.elm --output=dist/elm.js",
+    "build": "npx grunt build:development",
+    "build:prod": "npx grunt build:production",
     "lint": "npx elm-analyse",
-    "test": "npx elm-test"
+    "test": "npx elm-test",
+    "preinstall": "npx npm-force-resolutions"
   },
   "repository": {
     "type": "git",
@@ -29,9 +28,18 @@
   "devDependencies": {
     "elm-analyse": "^0.16.5",
     "elm-test": "^0.19.1-revision2",
+    "grunt": "^1.3.0",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-sass": "^2.0.0",
+    "grunt-elm": "^2.0.0",
+    "npm-force-resolutions": "0.0.3",
     "sass": "^1.26.10"
   },
   "dependencies": {
     "sakura.css": "^1.3.1"
+  },
+  "resolutions": {
+    "node-elm-compiler": "5.0.5"
   }
 }
