--- a/client/package.json
+++ b/client/package.json
@@ -31,9 +31,9 @@
     "elm-test": "^0.19.1-revision2",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-elm": "^0.8.2",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.26.10"
   },
