--- a/server/.pylintrc
+++ b/server/.pylintrc
@@ -49,8 +49,7 @@ confidence=
 # multiple time. See also the "--disable" option for examples.
 disable=all
 
-enable=import-error,
-       import-self,
+enable=import-self,
        reimported,
        wildcard-import,
        misplaced-future,
