--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "watch": "npx gulp watchDevelopment",
     "build": "npx gulp buildDevelopment",
     "build:prod": "npx gulp buildProduction",
+    "clean": "npx gulp clean",
     "lint": "npx elm-analyse",
     "test": "npx elm-test"
   },
@@ -30,6 +31,7 @@
     "elm-analyse": "^0.16.5",
     "elm-test": "^0.19.1-revision2",
     "gulp": "^4.0.2",
+    "gulp-buster": "^1.1.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-dart-sass": "^1.0.2",
     "gulp-elm": "^0.8.2",
