Set a low cache time for HTML files
So that, when there's a change, index.html updates quickly, and point to
the new .css and .js files.

--- a/nginx.dev.conf
+++ b/nginx.dev.conf
@@ -35,6 +35,12 @@ http {
       # I'd use the `alias` command here, but that doesn't play very well with
       # MIME types.
       root client/dist/;
+
+      # While developing, don't cache HTML files. (Other files, like CSS and
+      # JS, are fingerprinted, so we can cache them for as long as we want.)
+      location ~* \.(htm|html)$ {
+        add_header Cache-Control no-store;
+      }
     }
   }
 }
