--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -34,6 +34,13 @@ http {
       # I'd use the `alias` command here, but that doesn't play very well with
       # MIME types.
       root client/dist/;
+
+      # Set a low cache duration for HTML files. (They're tiny anyway.)
+      # That way, we can use fingerprinting to tightly control how .js and
+      # .css files are cached.
+      location ~* \.(htm|html)$ {
+        add_header Cache-Control "max-age=7200, public";
+      }
     }
   }
 }
