--- a/nginx.dev.conf
+++ b/nginx.dev.conf
@@ -36,6 +36,9 @@ http {
       # MIME types.
       root client/dist/;
 
+      # Cache most assests aggressively.
+      add_header Cache-Control "max-age=2629746, private";
+
       # While developing, don't cache HTML files. (Other files, like CSS and
       # JS, are fingerprinted, so we can cache them for as long as we want.)
       location ~* \.(htm|html)$ {
