--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -35,6 +35,9 @@ http {
       # MIME types.
       root client/dist/;
 
+      # Cache most assests aggressively.
+      add_header Cache-Control "max-age=2629746, private";
+
       # Set a low cache duration for HTML files. (They're tiny anyway.)
       # That way, we can use fingerprinting to tightly control how .js and
       # .css files are cached.
