--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,8 @@
     "sass": "^1.26.10"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
+    "fancy-log": "^1.3.3",
     "normalize.css": "^8.0.1",
     "sakura.css": "^1.3.1"
   }
