--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "watch": "npx gulp watchDevelopment",
     "build": "npx gulp buildDevelopment",
     "build:prod": "npx gulp buildProduction",
-    "clean": "npx gulp clean",
+    "clean": "npx gulp cleanDevelopment",
+    "clean:prod": "npx gulp cleanProduction",
     "lint": "npx elm-analyse",
     "test": "npx elm-test"
   },
