--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "sass": "^1.26.10"
   },
   "dependencies": {
+    "bach": "^1.2.0",
     "normalize.css": "^8.0.1",
     "sakura.css": "^1.3.1"
   }
