No need to set Cache-Control to private or public
I set Cache-Control: private as the default in nginx.prod.conf because I
was worried that--in the event I ever add authentication/authorization
to this project--it would be dangerous to put information like someone's
watchlist in a public cache. However, it looks like HTTP has sensible
defaults in this case: anything with an Authorization header won't be
cached.

Source:
https://sookocheff.com/post/api/effective-caching/#handling-authentication

--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -36,13 +36,13 @@ http {
       root client/dist/;
 
       # Cache most assests aggressively.
-      add_header Cache-Control "max-age=2629746, private";
+      add_header Cache-Control "max-age=2629746";
 
       # Set a low cache duration for HTML files. (They're tiny anyway.)
       # That way, we can use fingerprinting to tightly control how .js and
       # .css files are cached.
       location ~* \.(htm|html)$ {
-        add_header Cache-Control "max-age=7200, public";
+        add_header Cache-Control "max-age=7200";
       }
     }
   }
