--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,10 +35,17 @@ jobs:
           mariadb-client-10.5
     - name: Shut down Ubuntu's MySQL instance
       run: sudo service mysql stop
+    - name: Set the MariaDB root password
+      # This is a bit hacky. On an actual installation, we'd use a command like
+      # `mariadb-admin to set the initial root password, but that command
+      # doesn't work well in non-interactive mode.
+      run: |
+        echo >>startup.sql <<EOF
+        CREATE OR REPLACE USER 'root'@'localhost'
+          IDENTIFIED BY 'my_demo_password';
+        EOF
     - name: Start MariaDB
       run: sudo mariadbd --init-file="${PWD}/database/startup.sql" &
-    - name: Set the MariaDB root password
-      run: sudo mariadb-admin -u root password my_demo_password
 
     # Install and start the app server.
     - run: pip install --upgrade pip && pip install wheel
