--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,9 +50,9 @@ jobs:
     # Install and start the app server.
     - run: pip install --upgrade pip && pip install wheel
     - name: Install Python dependencies
-      run: pip install -r requirements/production.txt
+      run: cd server && pip install -r requirements/production.txt
     - name: Start Gunicorn
-      run: python setup.py run --production
+      run: cd server && python setup.py run --production
       env:
         DB_PASSWORD: my_demo_password
 
