--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       # doesn't work well in non-interactive mode.
       run: |
         echo >>database/startup.sql \
-          'SET PASSWORD FOR 'root'@'localhost' = PASSWORD("my_demo_password");'
+          'SET PASSWORD FOR root@localhost = PASSWORD("my_demo_password");'
     - name: Start MariaDB
       run: sudo mariadbd --init-file="${PWD}/database/startup.sql" &
 
