Stop nginx from logging accesses in production
We expect to be running this project on a small raspberry pi without
much disk space; and, while the access log doesn't take up very much
space, the utility it provides isn't worth the disk space it does
take up.

--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -7,12 +7,14 @@
 events {
 }
 
-error_log  /var/log/nginx/error.log;
+error_log /var/log/nginx/error.log;
 
 http {
   include mime.types;
 
-  access_log  /var/log/nginx/access.log;
+  # We expect to be running on a very small server where disk space is at a
+  # premium, so it isn't worth it to log accesses in production.
+  access_log off;
 
   server {
     listen 80;
