--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
-    "sakura.css": "^1.3.1"
+    "sakura.css": "^1.3.1",
+    "sharp": "^0.27.2"
   }
 }
